Included the jQuery

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<button class="form-control btn-primary">Calculate</button>
 	</div>
 
-	<script src="../ajo/jquery-3.4.1.js"></script>
+	<script src="jquery-3.4.1.js"></script>
 	<script>
 		$('body').ready(function() {
 			$('a').on('click', function() {
