--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 		</div>
 	</div>
 
-	<script src="../ajo/jquery-3.4.1.js"></script>
+	<script src="jquery-3.4.1.js"></script>
 	<script>
 		$('body').ready(function() {
 			$('button').on('click', function(e) {
